<resources>
    <string name="app_name">U22検証アプリ</string>
    <!-- メインメニュー画面用 -->
    <string name="bt_verification_01">検証01</string>
    <string name="bt_verification_02">検証02 Map-複数のピンを立てて詳細画面へ</string>
    <string name="bt_verification_03">検証03</string>
    <string name="bt_verification_04">検証04 写真撮影からジオタグの取得</string>
    <string name="bt_verification_05">検証05 スマホ内のアルバムからサーバに写真を送信</string>
    <string name="bt_verification_06">検証06</string>
    <string name="bt_verification_07">検証07 Map画面サンプル</string>
    <string name="bt_sample_01">サンプル01 Tabレイアウト</string>
    <string name="bt_sample_02">サンプル02 QRコード</string>
    <string name="bt_sample_03">サンプル03 サーバとの通信</string>

    <!-- Tabサンプル画面用 -->
    <string name="tab_title_home">ホーム</string>
    <string name="tab_title_page">ページ</string>
    <string name="tab_title_option">オプション</string>
    <string name="tab_tv_text">タブごとに違うFragmentを設定すると、レイアウトの違う画面を作成できる。</string>
    <string name="tab_tv_page">Page</string>

    <!-- QRコードサンプル画面用 -->
    <string name="qr_activity_title">QRコードサンプル</string>
    <string name="qr_tv_text_label">QRコード化する文字列</string>
    <string name="qr_bt_display">QRコード表示</string>
    <string name="qr_bt_reader">QRコードリーダを起動</string>
    <string name="qr_tv_read_text_label">読み取った文字列</string>
    <string name="title_activity_maps_sample">Map</string>

    <!-- サーバアクセスサンプル画面用 -->
    <string name="tv_login_title">ログイン</string>
    <string name="tv_login_id">ID</string>
    <string name="tv_login_pass">Password</string>
    <string name="tv_login_new_account"><u>アカウントを作成</u></string>

    <!-- 検証02画面用 -->
    <string name="title_activity_verification02">Map</string>

    <!-- 検証4サンプル画面用 -->
    <string name="bt_camera">カメラ起動</string>
</resources>
