<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/etId"
            android:hint="@string/tv_login_id"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/tv_login_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:onClick="onUserLoginClick"
            android:text="@string/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</LinearLayout>
